# awsome-ai-news

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  feed.xml  pyproject.toml  weekly.xml
.github/workflows/: daily-update.yml
archive/2025-12/: README.md
archive/2026-01/: README.md
config/: feeds.yaml  pipeline.yaml
news/: 2025-12-25.yaml  2025-12-26.yaml  2025-12-27.yaml  2025-12-28.yaml  2025-12-29.yaml  2025-12-30.yaml  2025-12-31.yaml  2026-01-01.yaml  2026-01-02.yaml  2026-01-03.yaml
prompts/: README.md  step3_clustering.yaml  step4_multi_dedup.yaml  step5_selection.yaml  step6_enhancement.yaml
scripts/: clean_for_test.sh
src/: __init__.py  constants.py  main.py
src/models/: __init__.py  articles.py  config.py  news.py  repository.py  rss.py
src/steps/: step0_cache.py  step1_ingestion.py  step2_dedup.py  step3_clustering.py  step4_multi_dedup.py  step5_selection.py  step6_enhancement.py  step7_repo.py  step8_rss.py
src/utils/: __init__.py  cache.py  config_loader.py  hash.py  logging.py  prompt_loader.py  slug.py
tests/: __init__.py  conftest.py
tests/bdd/: test_step0_bdd.py  test_step1_bdd.py  test_step2_bdd.py  test_step3_bdd.py  test_step4_bdd.py  test_step5_bdd.py
tests/bdd/features/: step0_cache.feature  step1_ingestion.feature  step2_dedup.feature  step3_clustering.feature  step4_multi_dedup.feature  step5_selection.feature
tests/integration/: test_config_integration.py  test_step0_integration.py  test_step1_integration.py  test_step2_integration.py  test_step3_integration.py  test_step4_integration.py  test_step5_integration.py  test_step6_integration.py
tests/unit/: test_models_articles.py  test_models_config.py  test_step0_cache.py  test_step1_ingestion.py  test_step2_dedup.py  test_step3_clustering.py  test_step4_multi_dedup.py  test_step5_selection.py  test_step6_enhancement.py  test_step7_repo.py  test_utils_cache.py  test_utils_hash.py  test_utils_slug.py
